<resources>
    <string name="app_name">Dummy</string>
    <string name="Heading">Welcome to Tic-Tac-Toe</string>
    <string name="Grid">MainGrid</string>
    <string name="image1">image1</string>
    <string name="image2">image2</string>
    <string name="image3">image3</string>
    <string name="image4">image4</string>
    <string name="image5">image5</string>
    <string name="image6">image6</string>
    <string name="image7">image7</string>
    <string name="image8">image8</string>
    <string name="image9">image9</string>
    <string name="reset">Reset</string>
    <string name="status0">"Tap to Play..!!"</string>
    <string name="status">"X's Turn - Tap to Play..!!"</string>
    <string name="status1">"O's Turn - Tap to Play..!!"</string>
</resources>